Fixed flickity overflow

--- a/Flickity/flickity.css
+++ b/Flickity/flickity.css
@@ -9,9 +9,9 @@ https://flickity.metafizzy.co
   .flickity-enabled:focus { outline: none; }
   
   .flickity-viewport {
-    overflow-x: hidden;
+    overflow: hidden;
     position: relative;
-    height: fit-content;
+    height: 100%;
   }
   
   .flickity-slider {
@@ -120,7 +120,7 @@ https://flickity.metafizzy.co
   .flickity-page-dots {
     position: absolute;
     width: 100%;
-    bottom: -10%;
+    bottom: -15%;
     padding: 0;
     margin: 20px 0px;
     list-style: none;
