--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
-/* div { 
+/* div {  
     border: 1px solid red;
-}
-*/
+} */
+
 
 /* Fonts */
 
@@ -853,7 +853,7 @@ header ul a:hover {
 .section13 {
     background-image: linear-gradient(180deg,#1000fe,#002fc3);
     color: white;
-    padding: 10% 5% 15%;
+    padding: 10% 5% 20%;
     height: 100%;
 }
 
